# stock-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/stock-sdk/: Cargo.toml  README.md
crates/stock-sdk-core/: Cargo.toml  README.md
crates/stock-sdk-core/src/: compute.rs  daily_factor.rs  lib.rs  project_files.rs  screening.rs
crates/stock-sdk/src/: lib.rs
