[workspace]
members = [
    "crates/stock-sdk",
    "crates/stock-sdk-core",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["serde", "std"] }
schemars = { version = "1.2.1", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
utoipa = { version = "5.5.0", features = ["chrono"] }
stock-sdk-core = { path = "crates/stock-sdk-core" }
