[package]
name = "stock-sdk"
version.workspace = true
edition = "2024"
license = "Apache-2.0"
description = "Public SDK for stock-goes-stonk screening scripts."
repository = "https://github.com/cloudiful/stock-sdk"
readme = "README.md"
publish = ["crates-io"]

[dependencies]
stock-sdk-core.workspace = true
